# studentbuddy-open.env

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  baseline.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
.github/: Dockerfile  README.md  requirements.txt
.github/workflows/: main.yml
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
studentbuddy-openenv/env/: env - Shortcut.lnk  environment.py  models.py
studentbuddy-openenv/scripts/: baseline.py
